--- a/public/frontend/top-nav/css/style.css
+++ b/public/frontend/top-nav/css/style.css
@@ -195,7 +195,7 @@
     width: 100%;
     height: auto;
     margin-top: 1.75rem;
-    padding: 1rem 2rem;
+    padding: 1rem 0rem;
     z-index: 109;
     opacity: 0;
     visibility: hidden;
@@ -207,8 +207,13 @@
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
+.headernav .menu > ul > li .menu-subs > ul {
+    margin: 0px;
+}
 .headernav .menu > ul > li .menu-subs > ul > li {
+    margin-left: 0px;
     line-height: 1;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 .headernav .menu > ul > li .menu-subs > ul > li > a {
     display: inline-block;
@@ -217,7 +222,8 @@
     font-weight: 500;
     line-height: 1.25;
     padding: 0.75rem 0;
-    border: none;
+    border: 0;
+    width: 100%;
     outline: none;
     color: var(--color-black);
     text-transform: capitalize;
@@ -225,87 +231,9 @@
     transition: all 0.3s ease;
 }
 .headernav .menu > ul > li .menu-column-1 {
-    min-width: 16rem;
-    max-width: 20rem;
-}
-.headernav .menu > ul > li .menu-subs.menu-mega {
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-}
-.headernav .menu > ul > li .menu-subs.menu-mega > .list-item > ul > li {
-    display: block;
-    line-height: 1;
-}
-.headernav .menu > ul > li .menu-subs.menu-mega > .list-item > ul > li > a {
-    display: inline-block;
-    font-family: inherit;
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 1.25;
-    padding: 0.5rem 0;
-    border: none;
-    outline: none;
-    color: var(--color-black);
-    text-transform: capitalize;
-    -webkit-transition: color 0.3s ease;
-    transition: color 0.3s ease;
-}
-.headernav .menu > ul > li .menu-subs.menu-column-4 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    max-width: 68rem;
-    width: 100%;
-    padding: 1.25rem 1rem;
-}
-.headernav .menu > ul > li .menu-subs.menu-column-4 > .list-item {
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 25%;
-    flex: 0 0 25%;
-    padding: 0 1rem;
-}
-.headernav .menu > ul > li .menu-subs.menu-column-4 > .list-item .title {
-    font-family: inherit;
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 1;
-    padding: 0.75rem 0;
-    color: var(--color-pink-700);
-    text-transform: uppercase;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
-.headernav
-    .menu
-    > ul
-    > li
-    .menu-subs.menu-column-4
-    > .list-item.text-center
-    .title {
-    text-align: center;
-}
-.headernav .menu > ul > li .menu-subs.menu-column-4 > .list-item img {
-    display: block;
-    width: 100%;
-    height: auto;
-    margin-top: 0.75rem;
-    -o-object-fit: cover;
-    object-fit: cover;
-}
-.headernav
-    .menu
-    > ul
-    > li
-    .menu-subs.menu-mega
-    > .list-item
-    > ul
-    > li
-    > a:hover,
-.headernav .menu > ul > li .menu-subs > ul > li > a:hover {
-    color: var(--color-pink-700);
+    min-width: 100px;
+    max-width: 250px;
+    padding: 0px;
 }
 .header-item-right a:hover {
     color: var(--color-pink-700);
@@ -365,6 +293,24 @@
         opacity: 1;
         visibility: visible;
     }
+
+    .headernav .menu > ul > li .menu-subs > ul {
+        padding: 0px;
+    }
+    .headernav .menu > ul > li .menu-subs > ul >li {
+        padding-left: 10px;
+    }
+    .headernav .menu > ul > li .menu-subs > ul > li:hover {
+        background-color: var(--color-pink-700);
+        color: #ffffff;
+    }
+    /* .headernav .menu > ul > li .menu-subs > ul > li > a:hover {
+        color: white;
+    } */
+    .headernav .menu > ul > li .menu-subs > ul > li > a:hover {
+        color: #ffffff;
+    }
+
     ul.menu-section {
         display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
         display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
@@ -616,63 +562,11 @@
         -webkit-box-shadow: none;
         box-shadow: none;
     }
-    .headernav .menu > ul > li .menu-subs.menu-mega {
-        position: absolute;
-        display: none;
-        top: 0;
-        left: 0;
-        max-width: none;
-        min-width: auto;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 1rem;
-        padding-top: 4rem;
-        opacity: 1;
-        overflow-y: auto;
-        visibility: visible;
-        -webkit-transform: translateX(0%);
-        transform: translateX(0%);
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
     .headernav .menu > ul > li .menu-subs.active {
         display: block;
     }
-    .headernav .menu > ul > li .menu-subs.menu-column-4 > .list-item {
-        -webkit-box-flex: 0;
-        -ms-flex: 0 0 100%;
-        flex: 0 0 100%;
-        padding: 0rem;
-    }
-    .headernav .menu > ul > li .menu-subs.menu-column-4 > .list-item img {
-        margin-top: 0;
-    }
-    .headernav
-        .menu
-        > ul
-        > li
-        .menu-subs.menu-column-4
-        > .list-item.text-center
-        .title {
-        margin-bottom: 1.25rem;
-    }
-    .headernav
-        .menu
-        > ul
-        > li
-        .menu-subs.menu-column-4
-        > .list-item.text-center:last-child
-        .title {
-        margin-bottom: 0rem;
-    }
+
     .headernav .menu > ul > li .menu-subs > ul > li > a {
-        display: block;
-    }
-    .headernav .menu > ul > li .menu-subs.menu-mega > .list-item > ul {
-        margin-bottom: 1rem;
-    }
-    .headernav .menu > ul > li .menu-subs.menu-mega > .list-item > ul > li > a {
         display: block;
     }
     .overlay {
