--- a/public/frontend/css/styles.css
+++ b/public/frontend/css/styles.css
@@ -1,10 +1,11 @@
-.carousel .item {
-  height: 300px;
+.carousel-inner a{
+    color: black;
 }
-
-.item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 300px;
+.carousel-inner a:hover{
+    color: rgb(255, 0, 0);
 }
+.carousel-indicators li {
+    width: 10px!important;
+    height: 10px!important;
+    border-radius: 50%;
+  }
