--- a/public/frontend/top-nav/css/style.css
+++ b/public/frontend/top-nav/css/style.css
@@ -385,7 +385,7 @@
         -ms-flex-pack: justify;
         justify-content: space-between;
         margin: 0 auto;
-        padding: 0.5rem 0;
+        padding: 0;
     }
 
     .headernav .menu-mobile-toggle {
