--- a/public/frontend/css/styles.css
+++ b/public/frontend/css/styles.css
@@ -10,7 +10,7 @@
     height: 10px!important;
     border-radius: 50%;
   }
-  .carousel-caption {
+.carousel-caption {
       background:linear-gradient(0deg,rgba(0,0,0,0.8) 0%,rgba(0,0,0,.2) 100%);
       left:0;
       right:0;
@@ -20,3 +20,18 @@
       border-radius: 5%;
     }
 
+.side-widget-cat ul {
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
+    }
+
+.side-widget-cat ul li, .side-widget-cat ul li a {
+    text-decoration: none;
+    font-size: 18px;
+    color: rgb(35, 0, 189);
+    cursor: pointer;
+    }
+.side-widget-cat ul li:hover, .side-widget-cat ul li a:hover {
+   color: rgb(218, 0, 0);
+}
