--- a/public/frontend/top-nav/css/style.css
+++ b/public/frontend/top-nav/css/style.css
@@ -360,6 +360,13 @@
         padding: 20px 12px;
         position: relative;
     }
+    .headernav .menu > ul > li > a.active {
+        background-color: var(--color-pink-600);
+        border-radius: 8px 8px 0px 0px;
+        color: white;
+        padding: 20px 12px;
+        position: relative;
+    }
 }
 @media screen and (max-width: 768px) {
     .header-item-center {
