--- a/public/frontend/css/card.css
+++ b/public/frontend/css/card.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   margin: 1rem auto;
-  box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   margin-bottom: 15px;
   background: #fff;
   line-height: 1.4;
