--- a/public/frontend/css/styles.css
+++ b/public/frontend/css/styles.css
@@ -75,3 +75,37 @@ border-bottom: 1px solid #e0e0e0;
       text-overflow: ellipsis;
     }
   }
+
+
+.date {
+    font-size: 11px
+}
+
+.comment-text {
+    font-size: 12px;
+    margin: 0px;
+}
+
+.fs-12 {
+    font-size: 12px
+}
+
+.shadow-none {
+    box-shadow: none
+}
+
+.name {
+    color: #007bff
+}
+
+.cursor:hover {
+    color: blue
+}
+
+.cursor {
+    cursor: pointer
+}
+
+.textarea {
+    resize: none
+}
